--- a/Reviews/Views/Reviews/Delete.cshtml
+++ b/Reviews/Views/Reviews/Delete.cshtml
@@ -1,17 +1,45 @@
-﻿@model Review
+﻿@model Reviews.Models.Review
 
-<ul>
-    <li>Id:@Model.Id</li>
-    <li>Name:@Model.Name</li>
-    <li>Rank:@Model.Rank</li>
-    <li>Description:@Model.Description</li>
-</ul>
-<form asp-action="Delete">
-    <div>
-        <label>Are you sure you want to delete this review?</label>
-        <input type="submit" value="Delete" />
-    </div>
+@{
+    ViewData["Title"] = "Delete";
+}
+
+<h1>Delete</h1>
+
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Review</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Rank)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Rank)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CreatedDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CreatedDate)
+        </dd>
+    </dl>
     
-
-
-</form>
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
+</div>
