--- a/Reviews/Views/Reviews/Edit.cshtml
+++ b/Reviews/Views/Reviews/Edit.cshtml
@@ -1,21 +1,44 @@
-﻿@model Review
-<form asp-action="Edit">
-    <input type="hidden" name="id" value="@Model.Id"/>
-    <div>
-        <label>Name</label>
-        <input name="name" value="@Model.Name" />
-    </div>
-    <div>
-        <label>Rank</label>
-        <input name="rank" value="@Model.Rank" />
-    </div>
-    <div>
-        <label>Description</label>
-        <input name="description" value="@Model.Description"/>
-    </div>
-    <div>
-        <input type="submit" />
-    </div>
+﻿@model Reviews.Models.Review
 
+@{
+    ViewData["Title"] = "Edit";
+}
 
-</form>
+<h1>Edit</h1>
+
+<h4>Review</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Rank" class="control-label"></label>
+                <input asp-for="Rank" class="form-control" />
+                <span asp-validation-for="Rank" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>       
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
