--- a/Reviews/Views/Reviews/Index.cshtml
+++ b/Reviews/Views/Reviews/Index.cshtml
@@ -1,6 +1,10 @@
-﻿@model List<Review>
+﻿@model IEnumerable<Reviews.Models.Review>
 
-<ul><a asp-action="Create">Create a new review</a></ul>
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
 <form asp-action="Find">
     <div>
         <label>Search by name</label>
@@ -9,44 +13,48 @@
     </div>
 </form>
 
-
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Rank</th>
-                    <th>Description</th>
-                    <th>Time Posted</th>
-                </tr>
-            </thead>
-            <tbody>
-                                @foreach (var review in Model)
-                                {
-                    <tr>
-                        <td>
-                                            @review.Id
-                        </td>
-                        <td>
-                                            @review.Name
-                        </td>
-                        <td>
-                                            @review.Rank
-                        </td>
-                        <td>
-                                            @review.Description
-                        </td>
-                        <td>
-                                            @review.CreatedDate
-                        </td>
-                        <td>
-                            <a asp-action="Details" asp-route-id="@review.Id">Details</a>
-                            <a asp-action="Edit" asp-route-id="@review.Id">Edit</a>
-                            <a asp-action="Delete" asp-route-id="@review.Id">Delete</a>
-
-                        </td>
-                    </tr>
-
-                                }
-            </tbody>
-        </table>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Rank)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedDate)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rank)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedDate)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
